[O2B-607] Add possibility to archive tags
