# lib/domain/dtos/UpdateTagDto.js
@@ -23,6 +23,7 @@ const BodyDto = Joi.object({
         .optional()
         .allow('', null)
         .email({ multiple: true }),
+    archivedAt: Joi.date().allow(null).optional(),
 });
 const QueryDto = Joi.object({
     token: Joi.string(),
