# lib/server/services/run/updateRun.js
@@ -100,7 +100,7 @@ const logQualityChange = async (runNumber, previousQuality, newQuality, transact
 exports.updateRun = async (identifier, runPatch, tags, eorReasons, user) => {
     const { fillNumber } = runPatch;
 
-    const runModel = await getRunOrFail(identifier);
+    const runModel = await getRunOrFail(identifier, (queryBuilder) => queryBuilder.include('tags'));
     const { id: runId } = runModel;
 
     await checkLhcFill(fillNumber, true);
@@ -116,6 +116,13 @@ exports.updateRun = async (identifier, runPatch, tags, eorReasons, user) => {
         }
 
         if (tags) {
+            // Check that tags are either not archived, or either archived but already in the run
+            for (const newTag of tags) {
+                if (newTag.archived && !runModel.tags.find(({ text }) => text === newTag.text)) {
+                    throw new Error('Archived tags can not be used when updating run');
+                }
+            }
+
             // Remove existing tags of the run and insert new ones
             await RunTagsRepository.removeById(runId).then(() => RunTagsRepository.insertMany(tags.map((tag) => ({
                 runId,
