# lib/server/services/tag/getAllTagsByTextOrFail.js
@@ -17,14 +17,15 @@ const { getTagsByText } = require('./getTagsByText.js');
  * Extract all the tags corresponding to a list of tags text. If any of the text do not correspond to a tag, throw an error
  *
  * @param {string[]} [tagsTexts] the list of tags text
+ * @param {boolean} [allowArchived=false] if true, archived tags will be returned. Else, archived tags are considered as not existing
  * @return {Promise<SequelizeTag[]>} the list of tags
  */
-const getAllTagsByTextOrFail = async (tagsTexts) => {
+const getAllTagsByTextOrFail = async (tagsTexts, allowArchived = false) => {
     if (!tagsTexts) {
         return [];
     }
 
-    const tags = await getTagsByText(tagsTexts);
+    const tags = await getTagsByText(tagsTexts, allowArchived ? null : (queryBuilder) => queryBuilder.where('archivedAt').is(null));
 
     const missingTags = tagsTexts.filter((text) => !tags.find((tag) => text === tag.text));
     if (missingTags.length > 0) {
